# sfma

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compare-gdp-le.R  compare-packages.R  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
data/: data_mod.csv  data_var.csv  df_mod_incdea.csv  gdp-le.csv  gdp.csv  le.csv  uhc.csv  uhc_data.csv
notebooks/: DEA_export.R  Data Simulations.ipynb  Front41Data Example.ipynb  GDP and LE.ipynb  L-BFGS-B Debug Example.ipynb  SFMA_Stoned_comp.ipynb  Simulation.ipynb  UHC-Current.ipynb  Untitled.ipynb  data_gen_.ipynb  example-to-share.ipynb  func_benchmark.py  helpers.py  helpers_comp.py  pystoned_sim.ipynb  sfma_stoned_homosk.ipynb  sfma_stoned_wrang.ipynb  uhc-example.ipynb
notebooks/.ipynb_checkpoints/: uhc-example-checkpoint.ipynb
src/sfma/: __about__.py  __init__.py  api.py  cov_model.py  data.py  ie_model.py  log_erfc.c  me_model.py  model.py  models.py  solver.py  solvers.py  utils.py
src/sfma.egg-info/: PKG-INFO  SOURCES.txt
src/sfma/models/: base.py  marginal.py  maximal.py  models.py  utils.py
src/sfma/solver/: __init__.py  ipsolver.py  pgsolver.py  projector.py  spsolver.py
src/sfma/solvers/: alt_solver.py  base.py  block_solver.py  (+1 more)
src/sfmasfa_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sfmasfma.sfa_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alt_solvers.py  test_block_solver.py  test_cov_model.py  test_data.py  test_em_solvers.py  test_model.py  test_models.py  test_solver.py  test_solvers.py  test_utils.py
