[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SFMA"
version = "0.1.0"
description = "Python package template"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
]
dependencies = [
    "anml",
    "matplotlib",
    "msca",
    "xspline==0.0.7",
    "numpy<2.0.0"
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/SFMA"
